Added support for java 17